@@ -98,7 +98,7 @@ test_that('dich data', {
     expect_equal(cfs, c(1.1816,-0.9814,1.0163,0.1887,-1.4527,1.0503,0.4358,1.5006,1.1467,0.6797,0.0491,1.1882,0.0973,1.4125,2,-0.8872,1.608,1.1489,0.038,2,2.0613,-0.4309,1.2006,-0.2361,3.059,2.0603,-0.5737,0.8731,0.8887,3.0685,2.0377,-0.5562,0.8547,0.5109,2.4815,0.9449,-0.9528,0.8799,0.8214,2.2063,0.0356,0.7931,0.8013,-0.9994,0.9197,0.6143,-1.4006,0.9478,0.6421,1.5446,0.9168,0.6944,-0.0308),
                  tolerance = 1e-2)
     fs <- fscores(simmod, verbose = FALSE)
-    expect_true(mirt:::closeEnough(fs[1:6,'F1'] - c( -2.649625, -2.242532, -2.361397, -1.957731, -1.739921, -1.973155), -1e-2, 1e-2))
+    expect_true(mirt:::closeEnough(fs[1:6,'F1'] - c( -2.6518, -2.2402, -2.3603, -1.9517, -1.7299, -1.9660), -1e-2, 1e-2))
     expect_is(fs, 'matrix')
 
     res <- residuals(simmod, verbose = FALSE)
