@@ -46,6 +46,10 @@ NEW FEATURES
   - added `itemnames` argument added to `mirt.model()` to allow model
   specifications using raw item names rather than location indicators
 
+  - `accelerate` argument changed from logical to character vector, now
+  allowing three potential options: 'Ramsay' (default), 'squarem', and 'none'
+  for modifying the EM acceleration approach
+
 BUG FIXES
 
   - fixed bug in `bfactor()` starting values when NAs were specified in the
